--- a/delegate-graphql-nodejs/package.json
+++ b/delegate-graphql-nodejs/package.json
@@ -15,11 +15,13 @@
     "@graphql-tools/load": "^7.5.1",
     "@graphql-tools/stitch": "^8.4.3",
     "@graphql-tools/wrap": "^8.4.0",
+    "@types/ramda": "^0.28.0",
     "cross-undici-fetch": "^0.1.24",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
     "graphql-tools": "^8.2.0",
+    "ramda": "^0.28.0",
     "rxjs": "^7.5.4",
     "typescript": "^4.5.5"
   },
